bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:3: error: not found: value asmile
  if (asmile==bsmile){
      ^MonkeyTrouble:3: error: not found: value bsmile
  if (asmile==bsmile){
              ^